--- a/web/templates/submission/index.html
+++ b/web/templates/submission/index.html
@@ -137,6 +137,13 @@ $(document).ready( function() {
                                 <label for="form_options">Options</label>
                                 <input type="text" class="form-control" id="form_options" name="options" value="{{ options }}" />
                             </div>
+			    <div class="form-group">
+			        <label for="form_analysis">Analysis</label>
+				<select class="form-control" id="form_analysis" name="analysis">
+				    <option value="1">CuckooMon</option>
+				    <option value="2">Zer0m0n</option>
+				</select>
+			    </div>	
                             <div class="form-group">
                                 <label for="form_priority">Priority</label>
                                 <select class="form-control" id="form_priority" name="priority">
