--- a/web/templates/analysis/search_results.html
+++ b/web/templates/analysis/search_results.html
@@ -11,6 +11,8 @@
             <tr>
                 <th style="width: 10%">Task ID</th>
                 <th style="width: 90%">Matches</th>
+                <th style="width: 90%">MD5</th>
+                <th style="width: 90%">Filename</th>
             </tr>
             </thead>
             <tbody>
@@ -28,6 +30,8 @@
                         </table>
                         {% if analysis.total %}<div>({{ analysis.total }} more matches)</div>{% endif %}
                     </td>
+                    <td><span style="font-family: monospace;padding-left: 15px;">{{analysis.md5}}</span></td>
+                    <td><span style="font-family: monospace;padding-left: 15px;">{{analysis.filename}}</span></td>
                 </tr>
             {% endfor %}
             </tbody>
